# mustache

./: .gitmodules  CMakeLists.txt
bench/: bench2.cpp  main.cpp
cmake/: gcc_warnings.cmake
src/: CMakeLists.txt
src/mustache/ecs/: base_job.cpp  base_job.hpp  component_factory.hpp  component_mask.hpp  entity_manager.cpp  entity_manager.hpp  job.hpp  system.cpp  system.hpp  system_manager.cpp
src/mustache/utils/: dispatch.cpp  logger.cpp  profiler.hpp  type_info.cpp  type_info.hpp
tests/: entity_manager.cpp  shared_component.cpp
